# MCP

./: Test.db  Test.db-shm  Test.db-wal  chatbot_backend.py  client.py  langgrph_stategraph_mcp.py  main.py  pyproject.toml  requirements.txt  test.py  weather.py
backend/: chatbot_backend.py  langgraph.json
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
frontend/: chatbot_frontend.py
mcp/: langgrph_stategraph_mcp.py  server.py
